<?xml version="1.0"?>
<package format="3">
  <name>lds02rr_lidar</name>
  <version>0.1.0</version>
  <description>LDS02RR LiDAR driver with motor PI control for picar2</description>
  <maintainer email="valentin.shevchenko@gmail.com">Valentyn Shevchenko</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
